<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainTask">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:isScrollContainer="false"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/todayContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/today_s_tasks"
                    android:textColor="#111111"
                    android:textSize="27sp"
                    android:textStyle="bold" />

                <com.androidrion.navigationdrawer.NoScrollListView
                    android:id="@+id/taskListToday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="#30CCCCCC"
                    android:dividerHeight="1dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tomorrowContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tomorrow_s_tasks"
                    android:textColor="#111111"
                    android:textSize="27sp"
                    android:textStyle="bold" />

                <com.androidrion.navigationdrawer.NoScrollListView
                    android:id="@+id/taskListTomorrow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="#30CCCCCC"
                    android:dividerHeight="1dp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/otherContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/upcoming_tasks"
                    android:textColor="#111111"
                    android:textSize="27sp"
                    android:textStyle="bold" />

                <com.androidrion.navigationdrawer.NoScrollListView
                    android:id="@+id/taskListUpcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="#30CCCCCC"
                    android:dividerHeight="1dp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="40dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346">

        <TextView
            android:id="@+id/emptyTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hey"
            android:textColor="#56C596"
            android:textSize="38sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_are_nfree_today"
            android:textColor="#040404"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/you_have_no_task_to_do_today"
            android:textColor="#878888"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/radius_border_button"
            android:onClick="openAddModifyTask"
            android:paddingHorizontal="70dp"
            android:paddingVertical="15dp"
            android:text="Add New Task"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="12dp"
        android:background="#4CAF50"
        android:onClick="openAddModifyTask"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.465"
        app:srcCompat="@drawable/plus" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>